--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stripe": "^18.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "tailwindcss": "^4.1.4"
   }
 }
