--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Project for Software Engineering and CS Elective",
   "main": "backend/server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"nodemon backend/server.js\"",
+    "start": "concurrently \"npm run start --prefix frontend\" \"node backend/server.js\"",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
