--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Project for Software Engineering and CS Elective",
   "main": "backend/server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
+    "dev": "set NODE_ENV=development && nodemon backend/server.js",
+    "start": "set NODE_ENV=production && node backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
@@ -29,7 +29,8 @@
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "stripe": "^18.0.0"
+    "stripe": "^18.0.0",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
