--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.9",
+    "openai": "^4.96.2",
     "stripe": "^18.0.0"
   },
   "devDependencies": {
