FIX THE DEPLOYMENT!!!!!!! HELL YEA

--- a/package.json
+++ b/package.json
@@ -1,26 +1,14 @@
 {
   "name": "e-commerce-webapp",
   "version": "1.0.0",
-  "description": "Project for Software Engineering and CS Elective",
+  "type": "module",
   "main": "backend/server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js",
-    "postinstall": "npm install --prefix frontend",
-    "build": "npm run build --prefix frontend",
+    "install:all": "npm install && npm install --prefix frontend",
+    "dev": "npm run install:all && nodemon backend/server.js",
+    "build": "npm run install:all && npm run build --prefix frontend",
     "start": "node backend/server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Full-Stack-Atok/E-Commerce-WebApp.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "bugs": {
-    "url": "https://github.com/Full-Stack-Atok/E-Commerce-WebApp/issues"
-  },
-  "homepage": "https://github.com/Full-Stack-Atok/E-Commerce-WebApp#readme",
   "dependencies": {
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
@@ -28,11 +16,10 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
-    "nodemon": "^3.1.9",
     "openai": "^4.96.2",
     "stripe": "^18.0.0"
   },
