--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@stripe/stripe-js": "^7.1.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.8.4",
+    "e-commerce-webapp": "file:..",
     "framer-motion": "^12.7.3",
     "lucide-react": "^0.488.0",
     "react": "^19.0.0",
@@ -22,7 +24,6 @@
     "react-router-dom": "^7.5.0",
     "recharts": "^2.15.2",
     "tailwindcss": "^4.1.4",
-    "@vitejs/plugin-react": "^4.4.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
