--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "main": "backend/server.js",
   "scripts": {
+    "postinstall": "npm run install:all && npm run build --prefix frontend",
     "install:all": "npm install && npm install --prefix frontend",
     "dev": "npm run install:all && nodemon backend/server.js",
     "build": "npm run install:all && npm run build --prefix frontend",
