--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "main": "backend/server.js",
   "scripts": {
-    "postinstall": "npm run install:all && npm run build --prefix frontend",
-    "install:all": "npm install && npm install --prefix frontend",
-    "dev": "npm run install:all && nodemon backend/server.js",
-    "build": "npm run install:all && npm run build --prefix frontend",
+    "postinstall": "npm install --prefix frontend && npm run build --prefix frontend",
+    "dev": "npm install && npm run postinstall && nodemon backend/server.js",
+    "build": "npm run postinstall",
     "start": "node backend/server.js"
   },
   "dependencies": {
