--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "node-nlp": "^5.0.0-alpha.5",
     "stripe": "^18.1.0"
   },
   "devDependencies": {
