--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "ioredis": "^5.6.1",
+    "train-nlp": "node backend/nlp/train-nlp.js",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "node-nlp": "^5.0.0-alpha.5",
