--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "train-nlp": "node nlp/train-nlp.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -15,7 +16,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "ioredis": "^5.6.1",
-    "train-nlp": "node backend/nlp/train-nlp.js",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "node-nlp": "^5.0.0-alpha.5",
