--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0",
+    "react-window": "^1.8.11",
     "recharts": "^2.15.2",
     "tailwindcss": "^4.1.4",
     "zustand": "^5.0.3"
